--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>hello world</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit est aspernatur laboriosam consequatur eveniet eius, aliquid animi tenetur voluptatum totam minima impedit amet minus odio, placeat vitae maxime nihil quis.</p>
+    <ul>
+        <li>satu</li>
+        <li>media</li>
+    </ul>
 </body>
 </html>
